--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -180,7 +180,7 @@
 					<li><a href="/store">Productos</a></li>
 					<li><a href="/contact">Contactanos</a></li>
 					<li><a href="/about">Sobre nosotros</a></li>
-					<li><a href="/device">Comparalos</a></li>
+					<li><a href="/comparison">Comparalos</a></li>
 					</ul>
 				</ul>
 				<!-- /NAV -->
