--- a/src/views/comparison/comparison.ejs
+++ b/src/views/comparison/comparison.ejs
@@ -4,7 +4,9 @@
 <head>
     <link rel="stylesheet" href="/css/comparison.css">
     <link rel="stylesheet" href="/css/search.css">
+    <link rel="stylesheet" href="/css/toastify.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -39,6 +41,8 @@
 
 </body>
 
-    <script src="/js/comparison.js"></script>
+    <script src="/js/comparison.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+	  <script src="https://unpkg.com/feather-icons"></script>
 
 </html>
