--- a/src/views/login/verify.ejs
+++ b/src/views/login/verify.ejs
@@ -35,7 +35,7 @@
 
 </body>
 
-<script src='/js/resendCode.js'></script>
+<script src='/js/resendCode.js' type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
 
