--- a/src/views/profile/account.ejs
+++ b/src/views/profile/account.ejs
@@ -56,7 +56,7 @@
 
   </body>
 
-      <script src="/js/userProfile.js"></script>
+      <script src="/js/userProfile.js" type="module"></script>
       <script src="/js/showPass.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
       <script src="https://unpkg.com/feather-icons"></script>
