--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -446,7 +446,7 @@
 	</body>
 	
 	    <script src="/js/stockColor.js"></script>
-	    <script src="/js/rating.js"></script>
+	    <script src="/js/rating.js" type="module"></script>
 		<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 		<script src="https://unpkg.com/feather-icons"></script>
 
