--- a/src/views/comparison/comparison.ejs
+++ b/src/views/comparison/comparison.ejs
@@ -23,7 +23,10 @@
             <div class="search-input-wrapper">
               <input class="input-comparison mobile-search" placeholder="Buscar dispositivos para comparar"
                 id="comparison-search">
-              <div id="buscar-results" class="search-results-dropdown"></div>
+              <div id="buscar-results" class="search-results-dropdown-comparison"></div>
+              <div class="search-icon-btn-comparison">
+                <i class="fa fa-search"></i>
+              </div>
             </div>
             <button type="submit" class="search-comparison-btn">Comparar</button>
           </div>
