--- a/public/css/comparison.css
+++ b/public/css/comparison.css
@@ -1,3 +1,11 @@
+.body-comparison {
+    padding: 16px;
+}
+
+.container-comparison {
+    padding: 20px;
+}
+
 .tittle-comparison {
     font-size: 2.50rem;
     font-weight: 800;
@@ -25,7 +33,7 @@
     flex: 1;
     padding: 24px;
     border-radius: 16px;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05), 0 0 8px rgba(17, 17, 26, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -137,7 +145,7 @@
     border-color: #6ee7b7;
 }
 
-.device-image .img-comparison{
+.device-image .img-comparison {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -171,7 +179,6 @@
     color: #ffffff;
     border-radius: 9999px;
     transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     border: none;
     cursor: pointer;
 }
@@ -181,7 +188,7 @@
 }
 
 .vs-separator-large-comparison {
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     padding: 16px;
@@ -226,7 +233,6 @@
     margin-top: -1px;
 }
 
-/* Pequeñas pantallas (sm) */
 @media (min-width: 640px) {
     .body-comparison {
         padding: 24px;
@@ -241,14 +247,12 @@
     }
 }
 
-/* Pantallas medianas (md) */
 @media (min-width: 768px) {
     .specs-grid {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-/* Pantallas grandes (lg) */
 @media (min-width: 1024px) {
     .body-comparison {
         padding: 32px;
