--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -119,13 +119,13 @@
 						data-product-image="<%= producto.imagen %>" data-product-color="<%= colorSeleccionado %>">
 						<i class="fa fa-heart-o"></i> Favoritos
 					</a>
-					<li><a href="#"><i class="fa fa-exchange"></i>Comparalo</a></li>
-				</ul>
-				<ul class="product-links">
-					<li>Categoría:</li>
-					<li><a href="#">
-							<%= producto.categoria==='moviles' ? 'Móviles' : producto.categoria.charAt(0).toUpperCase()
-								+ producto.categoria.slice(1) %>
+					<li><a href="#" class="add-to-compare" data-id="<%= producto.id %>">
+						<i class="fa fa-exchange"></i>Comparalo</a></li>
+					</ul>
+					<ul class="product-links">
+						<li>Categoría:</li>
+						<li><a href="#">
+							<%= producto.categoria==='moviles' ? 'Móviles' : producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
 						</a>
 					</li>
 				</ul>
@@ -444,10 +444,10 @@
 	<%- include('../partials/footer.ejs') %>
 
 	</body>
-	
-	    <script src="/js/stockColor.js"></script>
-	    <script src="/js/rating.js" type="module"></script>
-		<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-		<script src="https://unpkg.com/feather-icons"></script>
+	<script src="/js/buttonComparison.js"></script>
+	<script src="/js/stockColor.js"></script>
+	<script src="/js/rating.js" type="module"></script>
+	<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+	<script src="https://unpkg.com/feather-icons"></script>
 
 	</html>
